vlib/v/checker/tests/enum_value_used_before_decl_err.vv
enum TestEnum {
	chan = int(TestEnum.a)
	a    = 0
	b    = 1
}
